--- a/index.html
+++ b/index.html
@@ -9,16 +9,33 @@
   <title>Text Gallery</title>
 </head>
 <body>
-  <ul class="js-gallery"></ul>
-
+  <!--
+  homework1
+   <ul class="js-gallery"></ul>
   <div class="lightbox js-lightbox" style="display: none;">
     <div class="lightbox__overlay" style="position: fixed; top: 0; left: 0; width:100%; height:100%; background: rgba(0,0,0,0.8);"></div>
     <div class="lightbox__content" style="position: fixed; top:50%; left:50%; transform: translate(-50%, -50%); color: white; font-size: 32px; text-align: center; max-width:80vw;">
       <p class="lightbox__text"></p>
     </div>
     <button type="button" class="lightbox__button" data-action="close-lightbox" style="position: fixed; top: 20px; right: 20px; font-size: 24px;">✕</button>
+  </div> -->
+
+  <!-- homework2
+  <div class="slider">
+    <input type="range" min="50" max="300" value="150" class="slider__input" />
+    <img src="https://via.placeholder.com/300x300" class="slider__image" />
   </div>
-<script src="homework 1.js" type="module"></script>
+  <div id="box"></div>-->
+  
+  <!-- homework3
+  <img data-src="https://via.placeholder.com/800x600?text=Image+1" alt="Image 1">
+  <img data-src="https://via.placeholder.com/1200x800?text=Image+2" alt="Image 2">
+  <img data-src="https://via.placeholder.com/1600x900?text=Image+3" alt="Image 3">
+  <img data-src="https://via.placeholder.com/2000x1200?text=Image+4" alt="Image 4">
+  <button id="loadButton">lode all</button> -->
+
+<script src="homework 3.js" type="module"></script>
+
 </body>
 </html>
 
