--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
@@ -8,7 +8,7 @@
   <meta charset="UTF-8" />
   <title>Text Gallery</title>
 </head>
-<body>
+<body> -->
   <!--
   homework1
    <ul class="js-gallery"></ul>
@@ -34,9 +34,24 @@
   <img data-src="https://via.placeholder.com/2000x1200?text=Image+4" alt="Image 4">
   <button id="loadButton">lode all</button> -->
 
-<script src="homework 3.js" type="module"></script>
-
+<!-- <script src="homework3.js" type="module"></script>
 </body>
-</html>
+</html>-->
 
-
+<!-- homework5
+ <!DOCTYPE html> 
+<html lang="em">
+<head>
+<meta charset="UTF-8">
+<title></title>
+<script src="https://cdn.jsdelivr.net/npm/@pnotify/core/dist/PNotify.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+</head>
+<body>
+  <h1>Гра: Натисни правильну клавішу</h1>
+    <p>Натисніть клавішу: <span id="key"></span></p>
+      <button id="new-game">Нова гра</button>
+      <canvas id="sales-chart"></canvas>
+  <script src="homework5.js"></script>
+</body>
+</html> -->
